@@ -275,7 +275,7 @@ Example: <em class='italic'>&lt;default-des-key>01 02 03 04 05 06 07 08 09 10 11
 Optional global ip black list<br />
 A list of ip masks (wildcards supported) separated by space. This list applies to all defined profile listen ports and is checked first.<br />
 <br />
-Example:  <em class='italic'>&lt;deny-list>192.168.66.* 10.0.0.7&lt;/deny-list></em> <br />
+Example:  <em class='italic'>&lt;default-deny-list>192.168.66.* 10.0.0.7&lt;/default-deny-list></em> <br />
 <br />
 </a>
 
